# rust-axum-microservice

menu-service/: Cargo.toml  appconfig.Dev.toml
order-service/src/app/: mod.rs
order-service/src/app/models/: mod.rs
order-service/src/domain/entities/: order.rs  order_detail.rs
order-service/src/infra/: mod.rs
order-service/src/infra/settings/: mod.rs
order-service/src/infra/webhost/: mod.rs
payment-service/: appconfig.Dev.toml
rating-service/: appconfig.Dev.toml
restaurant-frontend/: package-lock.json  package.json
restaurant-services/: Cargo.toml
restaurant-services/common/src/: lib.rs
restaurant-services/common/src/webhost/: mod.rs
restaurant-services/customer-service/src/: main.rs
restaurant-services/order-service/: Cargo.toml  appconfig.Dev.toml
restaurant-services/order-service/src/: main.rs
restaurant-services/rating-service/: Cargo.toml
services/: Cargo.toml
services/common/: Cargo.toml
services/common/src/: lib.rs
services/common/src/cosmosdb/: mod.rs
services/common/src/data/: context.rs  cosmos.rs  mod.rs  repository.rs
services/common/src/data/cosmos/: mod.rs
services/common/src/webhost/: mod.rs
services/customer-service/: Cargo.toml  Dockerfile  appconfig.Dev.toml
services/customer-service/src/: main.rs
services/ingredient-service/: Cargo.toml  Dockerfile  appconfig.Dev.toml
services/ingredient-service/src/: main.rs
services/ingredient-service/src/app/: mod.rs
services/ingredient-service/src/app/commands/: create_ingredient.rs  delete_ingredient.rs  mod.rs  update_ingredient.rs  update_order.rs
services/ingredient-service/src/app/models/: ingredient.rs  ingredient_category.rs  ingredient_errors.rs  mod.rs
services/ingredient-service/src/app/queries/: get_all_ingredients.rs  get_all_orders.rs  get_ingredient_by_id.rs  mod.rs
services/ingredient-service/src/domain/entities/: ingredient.rs  ingredient_category.rs  mod.rs  order.rs
services/ingredient-service/src/infra/: apidocs.rs  mod.rs  settings.rs
services/ingredient-service/src/routes/: mod.rs
services/menu-service/: Cargo.toml  Dockerfile
services/menu-service/src/: main.rs
services/order-service/: Cargo.toml  Dockerfile
services/order-service/src/: main.rs
services/payment-service/: Cargo.toml  Dockerfile
services/payment-service/src/: main.rs
services/payment-service/src/app/: mod.rs
services/payment-service/src/app/commands/: create_payment.rs  delete_payment.rs  mod.rs  update_payment.rs
services/payment-service/src/app/models/: mod.rs  payment.rs  payment_error.rs
services/payment-service/src/app/queries/: get_all_payments.rs  get_payment_by_id.rs  mod.rs
services/payment-service/src/domain/entities/: payment.rs
services/payment-service/src/infra/: apidoc.rs  mod.rs
services/payment-service/src/routes/: mod.rs
services/rating-service/: Cargo.toml
services/rating-service/src/: main.rs
(+90 files in other folders)
