[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
axum-macros = "0.2.1"
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.18.2", features = ["full"] }
tower = { version = "0.4.12", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs", "trace", "cors", "compression-full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1.56"
mediator = { version = "0.2.2", features=["async", "streams"]}
utoipa = { version = "1.0.2", features = [ "chrono_with_format"] }
utoipa-swagger-ui = "1.0.0" 
appinsights = "0.2.2"
azure_data_cosmos = "0.3.0"
azure_core = "0.3.0"