[package]
name = "ingredient-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
axum = "0.5.6"
axum-macros = "0.2.1"
hyper = { version = "0.14.18", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_derive = "1.0.137"
tokio = { version = "1.18.2", features = ["full"] }
tower = { version = "0.4.12", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs", "trace", "cors", "compression-full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
config = "0.13.1"
mediator = { version = "0.2.2", features=["async", "streams", "interceptors"]}
utoipa = { version = "1.0.2", features = [ "chrono_with_format"] }
utoipa-swagger-ui = "1.0.0" 
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = "0.15.0"
appinsights = "0.2.2"
azure_data_cosmos = "0.3.0"
azure_core = "0.3.0"
