[package]
name = "payment-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
axum = "0.5.6"
axum-macros = "0.2.1"
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.18.2", features = ["full"] }
tower = { version = "0.4.12", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs", "trace", "cors", "compression-full"] }
chrono = { version = "0.4", features = ["serde"] }
mediator = { version = "0.2.2", features=["async", "streams"]}
utoipa = { version = "1.0.2", features = [ "chrono_with_format"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13.1"
azure_data_cosmos = "0.2.0"
azure_core = "0.2.2"
